# ganit

./: CLAUDE.md  Cargo.toml  README.md  coverage-badge.json  deny.toml  index.html
.config/: nextest.toml
.github/scripts/: generate-pages-html.py  post-conformance-comment.sh  post-coverage-comment.sh
.github/workflows/: ci.yml  release.yml
coverage/: index.html
coverage/html/: index.html
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: lib.rs
crates/core/src/engine/: mod.rs  tests.rs
crates/core/src/eval/: coercion.rs  context.rs  mod.rs  test_context_case.txt
crates/core/src/eval/functions/: mod.rs
crates/core/src/eval/functions/date/: mod.rs  serial.rs  weekend.rs
crates/core/src/eval/functions/engineering/: mod.rs
crates/core/src/parser/: ast.rs  mod.rs  tokens.rs
crates/core/tests/: conformance.rs  helpers.rs  integration.rs  property_array.rs  property_conformance.rs  property_date.rs  property_error_propagation.rs  property_financial.rs  property_logical.rs  property_lookup.rs  property_math.rs  property_text.rs
crates/core/tests/fixtures/google_sheets/: array.tsv  bugs.tsv  database.tsv  date.tsv  engineering.tsv  filter.tsv  financial.tsv  google.tsv  info.tsv  logical.tsv  lookup.tsv  math.tsv  operator.tsv  parser.tsv  statistical.tsv  text.tsv  web.tsv
crates/mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/mcp/src/: main.rs
crates/mcp/tests/: conformance.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
ganit/crates/wasm/: Cargo.toml
xtask/src/: main.rs  oracle_sheets.rs
(+881 files in other folders)
