[package]
name = "ganit-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false  # published to npm via wasm-pack, not crates.io

[lib]
crate-type = ["cdylib"]

[dependencies]
ganit-core = { path = "../core" }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
